# dotfiles

./: .Xresources  .bashrc  .editorconfig  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  .stow-local-ignore  .xinitrc  .zshrc  CLAUDE.md  LICENSE  Notes.md  README.md  actions.nix  apply-changes.sh  bootstrap.sh  configuration.nix  deploy.sh  devenv.nix  flake.nix  init.sh  install.sh  overlays.nix  pre-commit.nix  reset-nextcloud.sh  setup-ldap.sh  setup-media.sh  setup.sh  shell.nix  test.txt  treefmt.nix
.config/: code-flags.conf  starship.toml
.config/yadm/installer/: Cargo.toml  desktop.py  installer_target.py  main.py  models.py  system.py
.config/yadm/installer/scripts/: pacman.sh
.config/yadm/installer/src/: app.rs  main.rs
.config/yadm/installer/src/config/: mod.rs  system.rs
.config/yadm/installer/src/ui/: mod.rs
.config/yadm/installer/targets/system/: pacman.json
.config/yadm/installer/ui/: __init__.py  widgets.py  windows.py
.github/: copilot-instructions.md
.ssh/: authorized_keys  known_hosts
ags/: README.md  config.js  main.ts  types
ansible/: inventory.yml  localhost.yml  zephyrus.yml
devshells/: default.nix
drivers/: nvidia.sh
facter/: nixos.json  workstation.json
hardware-survey/: zephyrus.json
home/: home.nix
homes/: common.nix  desktop.nix
hosts/: .default.nix.kate-swp  configuration.nix  default.nix  hardware-configuration.nix  home.nix
installer/: bootstrap  install.sh  main.py  meta.json  meta.yml  shell.nix  util.py  util.sh
lib/: default.nix
modules/: core.nix  default.nix  (+2 more)
(+1721 files in other folders)
