[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
human-panic = "1.2.0"

regex = "1.9.5"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

clap = { version = "4.4.2", features = ["derive"] }

tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.8"

crossterm = "0.27.0"
ratatui = "0.23.0"
